syntax = "proto3";
package kratos.api;

option go_package = "github.com/staroffish/am/app/spider/internal/conf;conf";

message Bootstrap {
  Data data = 1;
}

message Data {
  message Etcd {
    repeated string end_points = 1;
    string user = 2;
    string password = 3;
    int64 dial_timeout = 4;
  }
  Etcd etcd = 1;
}

message SpiderParameter {
  string type = 1;
  string url = 2;
  string proxy = 3;
  string method = 4;
  int64 interval = 5;
  string user_agent = 6;
  int64 anime_magnet_timeout = 7;
}
